fix for mobile social icons wrapping

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1411,6 +1411,12 @@ hr.line {
 		&:hover{
 			background-color: transparent;
 		}
+
+		@media @mobile {
+		background-size: 30px;
+		height: 30px;
+		width: 30px;
+		}
 	}
 }
 
